[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/vmflib/examples/Example1.gd" type="Script" id=1]

[node name="Example1" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 433.0
margin_top = 281.0
margin_right = 590.0
margin_bottom = 319.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 157.0
margin_bottom = 14.0
text = "Generate a simple level:"
align = 1

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 157.0
margin_bottom = 38.0
text = "Click Me"
script = ExtResource( 1 )

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 42.0
margin_right = 421.0
margin_bottom = 56.0
text = "Your VMF is at %appdata%/Godot/NameOfProjectHere/output.vmf"
align = 1

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 42.0
margin_right = 157.0
margin_bottom = 62.0
text = "Show VMF"
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="CenterContainer/VBoxContainer/Button" method="_on_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button2" to="CenterContainer/VBoxContainer/Button" method="_on_Button2_pressed"]
